add initial files

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       <!--MOBILE MENU-->
 
-      <div class="mob-menu hidden">
+      <div class="mob-menu">
         <div class="container mob-container">
           <button type="button" class="btn-mob-menu">
             <svg class="icon-mob-menu" width="8" height="8">
