--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
 
     <!--============= MODAL  SECTION ============-->
 
-    <div class="modal-overlay hidden">
+    <div class="modal-overlay">
       <div class="modal">
         <button class="mod-btn" type="button">
           <svg class="close-btn" width="8" height="8">
